[AF] Only try to replace the triggering element during a re-fill.

There is an issue with the replacing logic if the forms and fields
have no identifier. This CL does not fix this directly, but greatly
reduces the cases where it will happen (only dynamic forms with more
than one form with no id).

Rogerm@ is working on a better way of identifying fields that
should help resolve this: crbug.com/896689

Bug: 898346
Change-Id: I7e17a6a2009be9e376088640bb14a81549ebbef2
Reviewed-on: https://chromium-review.googlesource.com/c/1319851
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606224}
Former-commit-id: e39d1178a45f7488b406337465d475f04776d5aa